Test file was renamed. #5

--- a/ObjParser_Tests/ObjParser_Tests.csproj
+++ b/ObjParser_Tests/ObjParser_Tests.csproj
@@ -37,7 +37,7 @@
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ProcessLine_Tests.cs" />
+    <Compile Include="LoadObjTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
