--- a/ObjParser/ObjParser.csproj
+++ b/ObjParser/ObjParser.csproj
@@ -40,10 +40,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Extent.cs" />
+    <Compile Include="Mtl.cs" />
     <Compile Include="Obj.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Types\Color.cs" />
     <Compile Include="Types\Face.cs" />
     <Compile Include="Types\IType.cs" />
+    <Compile Include="Types\Material.cs" />
     <Compile Include="Types\TextureVertex.cs" />
     <Compile Include="Types\Vertex.cs" />
   </ItemGroup>
