Add basic MTL writing support and unit test.

--- a/ObjParser_Tests/ObjParser_Tests.csproj
+++ b/ObjParser_Tests/ObjParser_Tests.csproj
@@ -39,6 +39,7 @@
   <ItemGroup>
     <Compile Include="LoadObjTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WriteObjTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
